--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
 <body>
     <div class="container">
-
         <div class="banner"></div>
         <div class="profile"></div>
         <div class="nickname">
@@ -20,28 +19,30 @@
             <p>&commat;Solarck</p>
         </div>
 
-        <div class="info">
-            <p class="text-info">Todas minhas redes sociais estão aqui!
-            Me conheça um pouco melhor. Sou desenvolvedor Frontend &verbar; JavaScript &verbar; Bootstrap</p>
-        </div>
-
-        <div class="icon">
-
-            <div class="github-icon">
-                <p>Github</p>
-                <a href="https://github.com/Solarck">https://github.com/Solarck</a>
+        <div class="info-links">
+            <div class="info">
+                <p class="text-info">Todas as minhas redes sociais estão aqui!
+                    Me conheça um pouco melhor. Sou desenvolvedor Frontend &verbar; JavaScript &verbar; Bootstrap.</p>
+                    <a class="typing-svg" href="https://git.io/typing-svg"><img src="https://readme-typing-svg.herokuapp.com?font=Fira+Code&weight=700&pause=1000&color=000000&background=FFFFFF00&center=verdadeiro&vCenter=verdadeiro&width=435&lines=Seja+bem+vindo!" alt="Typing SVG" /></a>
             </div>
 
-            <div class="instagram-icon">
-                <p>Instagram</p>
-                <a href="https://github.com/Solarck">https://github.com/Solarck</a>
-            </div>
+            <div class="icons">
+                <div class="github-icon">
+                    <p>Github</p>
+                    <a href="https://github.com/Solarck">https://github.com/Solarck</a>
+                </div>
 
-            <div class="linkedin-icon">
-                <p>Linkedin</p>
-                <a href="https://www.linkedin.com/in/fernando-carlos-2165b61a0">https://www.linkedin.com/in/fernando-carlos-2165b61a0</a>  
-            </div>
+                <div class="instagram-icon">
+                    <p>Instagram</p>
+                    <a href="https://www.instagram.com/eunand0_cs/">https://www.instagram.com/eunand0_cs/</a>
+                </div>
 
+                <div class="linkedin-icon">
+                    <p>Linkedin</p>
+                    <a href="https://www.linkedin.com/in/fernando-carlos-2165b61a0">https://www.linkedin.com/in/fernando-carlos-2165b61a0</a>
+                </div>
+
+            </div>
         </div>
     </div>
 </body>
