--- a/index.html
+++ b/index.html
@@ -6,45 +6,59 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Links</title>
-    <link rel="shortcut icon" href="imgs/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+
+    <link rel="stylesheet" href="Assets/CSS/style.css">
+    <link rel="stylesheet" href="Assets/CSS/ScrollBar.css">
+    <link rel="stylesheet" href="Assets/CSS/Media-Query.css">
 </head>
 
 <body>
-    <div class="container">
-        <div class="banner"></div>
-        <div class="profile"></div>
-        <div class="nickname">
-            <H1>Fernando Carlos</H1>
-            <p>&commat;Solarck</p>
-        </div>
+    <main class="main">
+        <header class="container">
+            <h1 class="name">Fernando Carlos</h1>
+            <img src="Assets/img/profile-pic.jpg" alt="profile-pic" class="profile">
+        </header>
 
-        <div class="info-links">
-            <div class="info">
-                <p class="text-info">Todas as minhas redes sociais estão aqui!
-                    Me conheça um pouco melhor. Sou desenvolvedor Frontend &verbar; JavaScript &verbar; Bootstrap.</p>
-                    <a class="typing-svg" href="https://git.io/typing-svg"><img src="https://readme-typing-svg.herokuapp.com?font=Fira+Code&weight=700&pause=1000&color=000000&background=FFFFFF00&center=verdadeiro&vCenter=verdadeiro&width=435&lines=Seja+bem+vindo!" alt="Typing SVG" /></a>
+        <nav class="description">
+            <h1>Front-end Developer</h1>
+            <p class="text-info">Todas as minhas redes sociais estão aqui!
+                Me conheça um pouco melhor. Sou desenvolvedor Front-end &verbar; JavaScript &verbar; Bootstrap.</p>
+        </nav>
+
+        <section class="links">
+            <div>
+                <a href="https://github.com/Solarck" target="_blank">
+                    <button class="social-media github">
+                        <h5>Github</h5>
+                    </button>
+                </a>
             </div>
 
-            <div class="icons">
-                <div class="github-icon">
-                    <p>Github</p>
-                    <a href="https://github.com/Solarck">https://github.com/Solarck</a>
-                </div>
-
-                <div class="instagram-icon">
-                    <p>Instagram</p>
-                    <a href="https://www.instagram.com/eunand0_cs/">https://www.instagram.com/eunand0_cs/</a>
-                </div>
-
-                <div class="linkedin-icon">
-                    <p>Linkedin</p>
-                    <a href="https://www.linkedin.com/in/fernando-carlos-2165b61a0">https://www.linkedin.com/in/fernando-carlos-2165b61a0</a>
-                </div>
-
+            <div>
+                <a href="https://www.linkedin.com/in/fernando-carlos-2165b61a0" target="_blank">
+                    <button class="social-media linkedin">
+                        <h5>Linkedin</h5>
+                    </button>
+                </a>
             </div>
-        </div>
-    </div>
+
+            <div>
+                <a href="https://solarck.github.io/Portifolio/" target="_blank">
+                    <button class="social-media portifolio">
+                        <h5>Portifolio</h5>
+                    </button>
+                </a>
+            </div>
+
+            <div>
+                <a href="https://www.instagram.com/eunand0_cs/" target="_blank">
+                    <button class="social-media instagram">
+                        <h5>Instagram</h5>
+                    </button>
+                </a>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
