--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
     <main class="main">
         <header class="container">
             <h1 class="name">Fernando Carlos</h1>
-            <img src="Assets/img/profile-pic.jpg" alt="profile-pic" class="profile">
         </header>
 
         <nav class="description">
-            <h1>Front-end Developer</h1>
+            <h1>Front-end Developer.</h1>
             <p class="text-info">Todas as minhas redes sociais estão aqui!
                 Me conheça um pouco melhor. Sou desenvolvedor Front-end &verbar; JavaScript &verbar; Bootstrap.</p>
         </nav>
