--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
 
             <div>
-                <a href="https://www.instagram.com/eunand0_cs/" target="_blank">
+                <a href="https://www.instagram.com/eu_solarck/" target="_blank">
                     <button class="social-media instagram">
                         <h5>Instagram</h5>
                     </button>
